tests/interpreter/binary-expression-not-equal-bad-types.stderr
error: cannot compare 'Number' with 'String'
 --> $DIR/binary-expression-not-equal-bad-types.lox:1:1
  |
1 | 10 != "foo";
  | ^^^^^^^^^^^
